<?xml version="1.0" encoding="utf-8" ?>
<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="app_name">\u0020Strat\u0020-\u0020Risk\u0020-\u0020MBA</string>

    <string name="app_subtitle">MBA Riesgos</string>

    <string name="press_again_to_exit">Press again to exit</string>

    <string name="dialog_matcher_email_address">Enter an email</string>

    <string name="string_pfd">Al usar la aplicación STRAT–RISK–MBA propiedad de MBA Y CÍA AGENCIA DE SEGUROS LTDA, empresa…</string>
    <string name="string_more">Read more</string>

    <string name="title_news">News</string>
    <string name="title_opportunity">Opportunity</string>
    <string name="title_interesting">Neutral</string>
    <string name="title_risk">Risk</string>

    <string name="string_link">Go to the News.</string>


    <string name="string_slider_button">Start</string>

    <string name="snackBar_opportunity">Added to Opportunity.</string>
    <string name="snackBar_interesting">Added to Neutral.</string>
    <string name="snackBar_risk">Added to Risk.</string>
    <string name="snackBar_remove">Remove.</string>
    <string name="snackBar_remove2">News Remove.</string>


    <string name="msj_there_are_no_email_clients_installed." tools:ignore="ExtraTranslation">There are no email clients installed.</string>
    <string name="btn_contact">Contact</string>

    <string name="extra_subject">Change Password</string>

    <string name="send_mail">Send mail</string>
    <string name="dialog_alert_dialog">AlertDialog</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_remove">Remove</string>

    <string name="string_analysis">News analysis</string>

    <string name="empty_news"><u>Indexed</u>\u0020news will be displayed here.</string>
    <string name="empty_opportunity">Here the news saved in\u0020<u>Opportunity</u>\u0020will be displayed when you add it to this category.</string>
    <string name="empty_intermediate">Selected news \u0020<u>Neutral</u>\u0020will be displayed when you add it to this category</string>
    <string name="empty_risk">Selected news \u0020<u>Risk</u>\u0020will be displayed when you add it to this category</string>

    <string name="string_slide_desc_1">The news app that allows you to keep up to date with the news in your sector and partially manage your strategic risks.</string>

    <string name="btn_cancel">Cancel</string>

    <string name="row_title">Title</string>
    <string name="row_body">Body</string>

    <string name="base_info">Info</string>
    <string name="base_faq">Faq</string>
    <string name="empty_layout">Empty</string>

    <string name="string_name">Name</string>
    <string name="string_email">Email</string>

    <string name="string_save_selection">Save news as\u003A</string>

    <string name="nv_string_title_menu">Menu</string>
    <!--
    <string name="nv_string_safe">Is there a transfer to insurance?</string>
    -->
    <string name="nv_string_question">Contact</string>
    <string name="nv_string_title_options">Options</string>
    <string name="nv_string_log_in_out">Login Out</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>


    <string name="string_action_options">Options</string>
    <string name="string_action_search">Search</string>

    <string name="string_restore">Restore</string>

    <string name="string_username">Username</string>
    <string name="string_password">Password</string>
    <string name="string_login">Log In</string>
    <string name="string_login_error">You have entered an incorrect username or password</string>
    <string name="string_server_status">Server status is down.</string>

    <string name="string_forgot_password"><u>Forgot\u0020your\u0020password</u>\?</string>

    <string name="string_forgot">Restore Access</string>

    <string name="string_log_in">Log in</string>
    <string name="string_accept">\u0020\u0020\u0020\u0020<u>I agree to the terms \u0026 conditions</u></string>

    <string name="string_forgot_body">We will send you a code to reset your password.</string>


    <string name="toast_no_internet_connection">Please check your internet connection and try again</string>
    <string name="dialog_no_internet_connection">The phone is not connected to the internet.</string>
    <string name="dialog_airplane_mode">The phone is in airplane mode.</string>

    <string name="dialog_empty_camps">The fields cannot be empty.</string>
    <string name="dialog_terms_conditions">Please accept the terms and conditions.</string>

    <string name="dialog_accept_terms_conditions">Legal notices.</string>

    <string name="dialog_policy_private">Privacy Policy</string>
    <string name="dialog_policy_service">Terms of Service</string>

    <string name="string_policy_private">Text here!! 1111</string>
    <string name="string_policy_service">Text here!! 2222</string>
    <string name="string_dialog_remove">Do you want remove this news?</string>

</resources>