<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_news"
        android:orderInCategory="1"
        android:title="@string/title_news"
        android:icon="@drawable/ic_news"
        app:cnb_iconColor="@color/colorPrimaryLight"
        />

    <item
        android:id="@+id/navigation_opportunity"
        android:orderInCategory="2"
        android:icon="@drawable/ic_oportunidad"
        android:title="@string/title_opportunity"
        app:cnb_iconColor="@color/colorOpportunity"/>

    <item
        android:id="@+id/navigation_interesting"
        android:orderInCategory="3"
        android:icon="@drawable/ic_neutral"
        android:title="@string/title_interesting"
        app:cnb_iconColor="@color/colorInteresting"
        />

    <item
        android:id="@+id/navigation_risk"
        android:orderInCategory="4"
        android:icon="@drawable/ic_amenaza"
        app:cnb_iconColor="@color/colorRisk"
        android:title="@string/title_risk" />
</menu>