<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_news">

    <fragment
        android:id="@+id/navigation_news"
        android:name="co.mba.strat_risk.ui.news.NewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_news">
        <action
            android:id="@+id/action_navigation_news_to_navigation_opportunity"
            app:destination="@id/navigation_opportunity" />
    </fragment>

    <fragment
        android:id="@+id/navigation_interesting"
        android:name="co.mba.strat_risk.ui.interesting.InterestingFragment"
        android:label="@string/title_interesting"
        tools:layout="@layout/fragment_interesting">
        <action
            android:id="@+id/action_navigation_interesting_to_navigation_risk"
            app:destination="@id/navigation_risk" />
    </fragment>

    <fragment
        android:id="@+id/navigation_opportunity"
        android:name="co.mba.strat_risk.ui.opportunity.OpportunityFragment"
        android:label="@string/title_opportunity">
        <action
            android:id="@+id/action_navigation_opportunity_to_navigation_interesting"
            app:destination="@id/navigation_interesting" />
    </fragment>

    <fragment
        android:id="@+id/navigation_risk"
        android:name="co.mba.strat_risk.ui.risk.RiskFragment"
        android:label="@string/title_risk"
        tools:layout="@layout/fragment_risk">
        <action
            android:id="@+id/action_navigation_risk_to_navigation_news"
            app:destination="@id/navigation_news" />
    </fragment>
</navigation>