<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/custom_spacing32dp"
        android:fontFamily="@font/montserrat_black"
        android:gravity="center"
        android:textStyle="bold"
        android:text="@string/app_name"
        android:textColor="@color/colorWhite"
        android:textSize="40sp" />

    <include
        android:id="@+id/content"
        layout="@layout/login_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="@dimen/custom_spacing32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/content"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/login_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/checkbox_selector"
            android:fontFamily="@font/montserrat_regular_"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="@string/string_accept"
            android:backgroundTint="@color/colorWhite"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="@dimen/custom_text_size16sp"
            android:textStyle="bold"
            app:buttonTint="@color/colorPrimaryLight" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/forgot_password"
        android:layout_marginStart="@dimen/custom_spacing16dp"
        android:layout_marginEnd="@dimen/custom_spacing16dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:fontFamily="@font/montserrat_regular_"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:background="@drawable/background_button_accent2"
            android:gravity="center"
            android:paddingLeft="30dp"
            android:paddingTop="10dp"
            android:paddingRight="30dp"
            android:paddingBottom="10dp"
            android:text="@string/string_login"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="@dimen/custom_text_size16sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/custom_spacing16dp"
        android:layout_marginTop="@dimen/custom_spacing16dp"
        android:layout_marginEnd="@dimen/custom_spacing24dp"
        android:layout_marginBottom="@dimen/custom_spacing16dp"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/montserrat_regular_"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        android:gravity="center"
        android:text="@string/string_forgot_password"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="@dimen/custom_text_size16sp"
        android:textStyle="bold" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/login_progress"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
         />
</RelativeLayout>