<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_content_dialog_alert"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/content_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/icon_dialog_message"
        android:layout_marginTop="-40dp"
        android:background="@drawable/background_dialog_message"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="40dp"
        android:paddingBottom="20dp">


        <!--
        <TextView
            android:id="@+id/txt_dialog_selection_title"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/custom_spacing16dp"
            android:layout_marginTop="@dimen/custom_spacing16dp"
            android:layout_marginEnd="@dimen/custom_spacing16dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_regular_"
            android:gravity="center"
            android:maxLines="3"
            android:text="@string/row_title"
            android:textColor="@color/colorPrimaryLight"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_dialog_selection_body"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/custom_spacing16dp"
            android:layout_marginEnd="@dimen/custom_spacing16dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_regular_"
            android:gravity="start"
            android:maxLines="4"
            android:text="@string/row_body"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/txt_dialog_selection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/custom_spacing16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/custom_spacing16dp"
            android:ellipsize="end"
            android:fontFamily="@font/montserrat_regular_"
            android:gravity="center"
            android:text="@string/string_save_selection"
            android:textColor="@color/textHint"
            android:textSize="@dimen/custom_text_size16sp"
            android:textStyle="bold" />

        -->

        <!--
        //TODO CHANGE SELECTION WITH FLOATING ACTION BUTTONS
        -->


        <LinearLayout
            android:id="@+id/dialogSelectionOpportunity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/custom_spacing16dp"
            android:layout_marginTop="@dimen/custom_spacing16dp"
            android:layout_marginEnd="@dimen/custom_spacing16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/floatingOpportunity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button_accent2"
                android:fontFamily="@font/montserrat_regular_"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:text="@string/title_opportunity"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/custom_text_size16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialogSelectionInteresting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/custom_spacing16dp"
            android:layout_marginTop="@dimen/custom_spacing16dp"
            android:layout_marginEnd="@dimen/custom_spacing16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/floatingInteresting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button_accent2"
                android:fontFamily="@font/montserrat_regular_"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:text="@string/title_risk"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/custom_text_size16sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/dialogSelectionRisk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/custom_spacing16dp"
            android:layout_marginTop="@dimen/custom_spacing16dp"
            android:layout_marginEnd="@dimen/custom_spacing16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/floatingRisk"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_button_accent2"
                android:fontFamily="@font/montserrat_regular_"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:text="@string/title_interesting"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/custom_text_size16sp"
                android:textStyle="bold" />
        </LinearLayout>


        <!--
        <LinearLayout
            android:id="@+id/containerFloating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/custom_spacing16dp"
            android:layout_marginTop="@dimen/custom_spacing16dp"
            android:layout_marginEnd="@dimen/custom_spacing16dp"
            android:layout_marginBottom="@dimen/custom_spacing16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/dialogSelectionOpportunity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/custom_spacing16dp"
                android:layout_marginEnd="@dimen/custom_spacing16dp"
                android:background="@drawable/fab_border"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="2dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingOpportunity"
                    style="@style/Widget.MaterialComponents.FloatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/custom_spacing16dp"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    app:backgroundTint="@color/colorOpportunity"
                    app:fabSize="auto"
                    app:maxImageSize="36dp"
                    app:srcCompat="@drawable/ic_gris"
                    app:tint="@color/colorWhite" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/dialogSelectionInteresting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/custom_spacing16dp"
                android:layout_marginEnd="@dimen/custom_spacing16dp"
                android:background="@drawable/fab_border"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="2dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingInteresting"
                    style="@style/Widget.MaterialComponents.FloatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/custom_spacing16dp"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    app:backgroundTint="@color/colorInteresting"
                    app:fabSize="auto"
                    app:maxImageSize="36dp"
                    app:srcCompat="@drawable/ic_gris"
                    app:tint="@color/colorWhite" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/dialogSelectionRisk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/custom_spacing16dp"
                android:layout_marginEnd="@dimen/custom_spacing16dp"
                android:background="@drawable/fab_border"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="2dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingRisk"
                    style="@style/Widget.MaterialComponents.FloatingActionButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="@dimen/custom_spacing16dp"
                    android:foreground="?android:attr/selectableItemBackgroundBorderless"
                    app:backgroundTint="@color/colorRisk"
                    app:fabSize="auto"
                    app:maxImageSize="36dp"
                    app:srcCompat="@drawable/ic_gris"
                    app:tint="@color/colorWhite" />
            </LinearLayout>

        </LinearLayout>
        -->

        <!--
        <LinearLayout
            android:id="@+id/content_controlls"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/custom_spacing16dp"
            android:layout_marginTop="@dimen/custom_spacing16dp"
            android:layout_marginEnd="@dimen/custom_spacing16dp"
            android:layout_marginBottom="@dimen/custom_spacing16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/floatingOpportunity"
                android:layout_width="@dimen/custom_spacing78dp"
                android:layout_height="@dimen/custom_spacing78dp"
                android:layout_marginEnd="@dimen/custom_spacing16dp"
                android:background="@drawable/background_button_dialog_selection_1"
                android:elevation="@dimen/custom_spacing16dp"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:padding="4dp"
                android:src="@drawable/ic_gris"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/floatingInteresting"
                android:layout_width="@dimen/custom_spacing78dp"
                android:layout_height="@dimen/custom_spacing78dp"
                android:layout_marginStart="@dimen/custom_spacing8dp"
                android:layout_marginEnd="@dimen/custom_spacing8dp"
                android:background="@drawable/background_button_dialog_selection_2"
                android:elevation="@dimen/custom_spacing16dp"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:padding="4dp"
                android:src="@drawable/ic_gris"
                tools:ignore="ContentDescription" />

            <ImageView
                android:padding="4dp"
                android:id="@+id/floatingRisk"
                android:layout_width="@dimen/custom_spacing78dp"
                android:layout_height="@dimen/custom_spacing78dp"
                android:layout_marginStart="@dimen/custom_spacing16dp"
                android:background="@drawable/background_button_dialog_selection_3"
                android:elevation="@dimen/custom_spacing16dp"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_gris"
                tools:ignore="ContentDescription" />
        </LinearLayout>

        -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/custom_spacing16dp"
            android:layout_marginTop="@dimen/custom_spacing16dp"
            android:layout_marginEnd="@dimen/custom_spacing16dp"
            android:gravity="end"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_selection_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/background_button_accent"
                android:fontFamily="@font/montserrat_regular_"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:text="@string/btn_cancel"
                android:textColor="@color/colorPrimaryLight"
                android:textSize="@dimen/custom_text_size16sp" />

            <TextView
                android:id="@+id/txt_selection_delete"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/custom_spacing8dp"
                android:layout_weight="1"
                android:background="@drawable/background_button_selection"
                android:drawableStart="@drawable/ic_remove"
                android:fontFamily="@font/montserrat_regular_"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:gravity="center"
                android:paddingLeft="30dp"
                android:paddingTop="10dp"
                android:paddingRight="30dp"
                android:paddingBottom="10dp"
                android:text="@string/btn_remove"
                android:textSize="@dimen/custom_text_size16sp" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/icon_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="15dp"
        android:background="@drawable/side_nav_bar2">

        <ImageView

            android:id="@+id/dialog_selection_img"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_gris"
            tools:ignore="ContentDescription" />
    </RelativeLayout>
</RelativeLayout>